--- a/libs/isograph-react-disposable-state/package.json
+++ b/libs/isograph-react-disposable-state/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "18.3.1",
+    "@types/react-test-renderer": "^18.3.0",
     "react-test-renderer": "^18.2.0",
     "typescript": "5.6.3"
   },
