clippy: match_wild_err_arm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,3 +72,4 @@ print_stderr = "deny"
 print_stdout = "deny"
 explicit_deref_methods = "deny"
 explicit_into_iter_loop = "deny"
+match_wild_err_arm = "deny"
