deny needless_for_each

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,3 +75,4 @@ explicit_into_iter_loop = "deny"
 match_wild_err_arm = "deny"
 unnecessary_join = "deny"
 unused_self = "deny"
+needless_for_each = "deny"
