--- a/relay-crates/graphql-cli/Cargo.toml
+++ b/relay-crates/graphql-cli/Cargo.toml
@@ -11,3 +11,9 @@ license = "MIT"
 [dependencies]
 colored = "2.1.0"
 common = { path = "../common" }
+
+[lints]
+workspace = false
+
+[lints.clippy]
+all = "allow"
