--- a/relay-crates/intern/Cargo.toml
+++ b/relay-crates/intern/Cargo.toml
@@ -26,7 +26,13 @@ serde_json = { version = "1.0.100", features = [
     "unbounded_depth",
 ] }
 
+[lints]
+workspace = false
+
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
     'cfg(memory_consistency_assertions)',
 ] }
+
+[lints.clippy]
+all = "allow"
