clippy: deny unnecessary_join

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,3 +73,4 @@ print_stdout = "deny"
 explicit_deref_methods = "deny"
 explicit_into_iter_loop = "deny"
 match_wild_err_arm = "deny"
+unnecessary_join = "deny"
