clippy: deny unused_self

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,3 +74,4 @@ explicit_deref_methods = "deny"
 explicit_into_iter_loop = "deny"
 match_wild_err_arm = "deny"
 unnecessary_join = "deny"
+unused_self = "deny"
