--- a/relay-crates/graphql-syntax/Cargo.toml
+++ b/relay-crates/graphql-syntax/Cargo.toml
@@ -23,3 +23,6 @@ thiserror = "1.0.49"
 fixture-tests = { path = "../fixture-tests" }
 graphql-cli = { path = "../graphql-cli" }
 tokio = { version = "1.29.1", features = ["full", "test-util", "tracing"] }
+
+[lints.clippy]
+all = "allow"
