clippy: deny struct_field_names

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,3 +76,4 @@ match_wild_err_arm = "deny"
 unnecessary_join = "deny"
 unused_self = "deny"
 needless_for_each = "deny"
+struct_field_names = "deny"
