clippy: deny cast_precision_loss

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,3 +77,4 @@ unnecessary_join = "deny"
 unused_self = "deny"
 needless_for_each = "deny"
 struct_field_names = "deny"
+cast_precision_loss = "deny"
