--- a/clippy.toml
+++ b/clippy.toml
@@ -1,4 +1,5 @@
 disallowed-methods = [
   { path = "prelude::Postfix::dbg" },
+  { path = "prelude::Postfix::dbg_with_note" },
   { path = "prelude::Postfix::note_do_not_commit" },
 ]
