--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,35 +51,6 @@
     "demos/vite-demo/*.njsproj": true,
     "demos/vite-demo/*.sln": true,
     "demos/vite-demo/*.sw?": true,
-    "demos/github-demo/# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.": true,
-    "demos/github-demo/# dependencies": true,
-    "demos/github-demo//node_modules": true,
-    "demos/github-demo//.pnp": true,
-    "demos/github-demo/.pnp.js": true,
-    "demos/github-demo/# testing": true,
-    "demos/github-demo//coverage": true,
-    "demos/github-demo/# next.js": true,
-    "demos/github-demo//.next/": true,
-    "demos/github-demo//out/": true,
-    "demos/github-demo/# production": true,
-    "demos/github-demo//build": true,
-    "demos/github-demo/# misc": true,
-    "demos/github-demo/.DS_Store": true,
-    "demos/github-demo/*.pem": true,
-    "demos/github-demo/# debug": true,
-    "demos/github-demo/npm-debug.log*": true,
-    "demos/github-demo/yarn-debug.log*": true,
-    "demos/github-demo/yarn-error.log*": true,
-    "demos/github-demo/# local env files": true,
-    "demos/github-demo/.env*.local": true,
-    "demos/github-demo/# vercel": true,
-    "demos/github-demo/.vercel": true,
-    "demos/github-demo/# typescript": true,
-    "demos/github-demo/*.tsbuildinfo": true,
-    "demos/github-demo/next-env.d.ts": true,
-    "demos/github-demo/.vscode": true,
-    "demos/github-demo/node_modules": true,
-    "demos/github-demo/.next": true,
     "docs-website/# Dependencies": true,
     "docs-website//node_modules": true,
     "docs-website/# Production": true,
@@ -125,9 +96,37 @@
     "vscode-extension/out/": true,
     "vscode-extension/tsconfig.tsbuildinfo": true,
     "vscode-extension/*.vsix": true,
+    "demos/github-demo/# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.": true,
+    "demos/github-demo/# dependencies": true,
+    "demos/github-demo//node_modules": true,
+    "demos/github-demo//.pnp": true,
+    "demos/github-demo/.pnp.js": true,
+    "demos/github-demo/# testing": true,
+    "demos/github-demo//coverage": true,
+    "demos/github-demo/# next.js": true,
+    "demos/github-demo//.next/": true,
+    "demos/github-demo//out/": true,
+    "demos/github-demo/# production": true,
+    "demos/github-demo//build": true,
+    "demos/github-demo/# misc": true,
+    "demos/github-demo/.DS_Store": true,
+    "demos/github-demo/*.pem": true,
+    "demos/github-demo/# debug": true,
+    "demos/github-demo/npm-debug.log*": true,
+    "demos/github-demo/yarn-debug.log*": true,
+    "demos/github-demo/yarn-error.log*": true,
+    "demos/github-demo/# local env files": true,
+    "demos/github-demo/.env*.local": true,
+    "demos/github-demo/# vercel": true,
+    "demos/github-demo/.vercel": true,
+    "demos/github-demo/# typescript": true,
+    "demos/github-demo/*.tsbuildinfo": true,
+    "demos/github-demo/next-env.d.ts": true,
+    "demos/github-demo/.vscode": true,
+    "demos/github-demo/node_modules": true,
+    "demos/github-demo/.next": true,
     "**/dist/**": true,
     "**/node_modules/**": true,
-    ".vscode": true,
     "**/yarn-error.log": true,
     "**/*.tsbuildinfo": true,
     "**/*.tgz": true,
@@ -139,14 +138,53 @@
     "**/*.d.ts": true,
     "**/.DS_Store": true,
     "**/.swc/**": true,
+    "**/.idea/**": true,
     "# the built binary is downloaded into this folder during CI": true,
     "artifacts": true,
     "**/out/**": true,
     "**/.turbo/**": true,
     "**/swc_isograph_plugin.wasm": true,
-    "**/.claude/**": true,
-    "**/.cargo/**": true,
-    "**/.rustup/**": true
+    "tree-sitter/# Rust artifacts": true,
+    "tree-sitter/target/": true,
+    "tree-sitter/Cargo.lock": true,
+    "tree-sitter/# Node artifacts": true,
+    "tree-sitter/build/": true,
+    "tree-sitter/prebuilds/": true,
+    "tree-sitter/node_modules/": true,
+    "tree-sitter/package-lock.json": true,
+    "tree-sitter/# Swift artifacts": true,
+    "tree-sitter/.build/": true,
+    "tree-sitter/Package.resolved": true,
+    "tree-sitter/# Go artifacts": true,
+    "tree-sitter/_obj/": true,
+    "tree-sitter/# Python artifacts": true,
+    "tree-sitter/.venv/": true,
+    "tree-sitter/dist/": true,
+    "tree-sitter/*.egg-info": true,
+    "tree-sitter/*.whl": true,
+    "tree-sitter/# C artifacts": true,
+    "tree-sitter/*.a": true,
+    "tree-sitter/*.so": true,
+    "tree-sitter/*.so.*": true,
+    "tree-sitter/*.dylib": true,
+    "tree-sitter/*.dll": true,
+    "tree-sitter/*.pc": true,
+    "tree-sitter/*.exp": true,
+    "tree-sitter/*.lib": true,
+    "tree-sitter/# Zig artifacts": true,
+    "tree-sitter/.zig-cache/": true,
+    "tree-sitter/zig-cache/": true,
+    "tree-sitter/zig-out/": true,
+    "tree-sitter/# Example dirs": true,
+    "tree-sitter//examples/*/": true,
+    "tree-sitter/# Grammar volatiles": true,
+    "tree-sitter/*.wasm": true,
+    "tree-sitter/*.obj": true,
+    "tree-sitter/*.o": true,
+    "tree-sitter/# Archives": true,
+    "tree-sitter/*.tar.gz": true,
+    "tree-sitter/*.tgz": true,
+    "tree-sitter/*.zip": true
   },
   "files.exclude": {
     "demos/disposable-state-ajax-demo/# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.": true,
@@ -200,35 +238,6 @@
     "demos/vite-demo/*.njsproj": true,
     "demos/vite-demo/*.sln": true,
     "demos/vite-demo/*.sw?": true,
-    "demos/github-demo/# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.": true,
-    "demos/github-demo/# dependencies": true,
-    "demos/github-demo//node_modules": true,
-    "demos/github-demo//.pnp": true,
-    "demos/github-demo/.pnp.js": true,
-    "demos/github-demo/# testing": true,
-    "demos/github-demo//coverage": true,
-    "demos/github-demo/# next.js": true,
-    "demos/github-demo//.next/": true,
-    "demos/github-demo//out/": true,
-    "demos/github-demo/# production": true,
-    "demos/github-demo//build": true,
-    "demos/github-demo/# misc": true,
-    "demos/github-demo/.DS_Store": true,
-    "demos/github-demo/*.pem": true,
-    "demos/github-demo/# debug": true,
-    "demos/github-demo/npm-debug.log*": true,
-    "demos/github-demo/yarn-debug.log*": true,
-    "demos/github-demo/yarn-error.log*": true,
-    "demos/github-demo/# local env files": true,
-    "demos/github-demo/.env*.local": true,
-    "demos/github-demo/# vercel": true,
-    "demos/github-demo/.vercel": true,
-    "demos/github-demo/# typescript": true,
-    "demos/github-demo/*.tsbuildinfo": true,
-    "demos/github-demo/next-env.d.ts": true,
-    "demos/github-demo/.vscode": true,
-    "demos/github-demo/node_modules": true,
-    "demos/github-demo/.next": true,
     "docs-website/# Dependencies": true,
     "docs-website//node_modules": true,
     "docs-website/# Production": true,
@@ -274,9 +283,37 @@
     "vscode-extension/out/": true,
     "vscode-extension/tsconfig.tsbuildinfo": true,
     "vscode-extension/*.vsix": true,
+    "demos/github-demo/# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.": true,
+    "demos/github-demo/# dependencies": true,
+    "demos/github-demo//node_modules": true,
+    "demos/github-demo//.pnp": true,
+    "demos/github-demo/.pnp.js": true,
+    "demos/github-demo/# testing": true,
+    "demos/github-demo//coverage": true,
+    "demos/github-demo/# next.js": true,
+    "demos/github-demo//.next/": true,
+    "demos/github-demo//out/": true,
+    "demos/github-demo/# production": true,
+    "demos/github-demo//build": true,
+    "demos/github-demo/# misc": true,
+    "demos/github-demo/.DS_Store": true,
+    "demos/github-demo/*.pem": true,
+    "demos/github-demo/# debug": true,
+    "demos/github-demo/npm-debug.log*": true,
+    "demos/github-demo/yarn-debug.log*": true,
+    "demos/github-demo/yarn-error.log*": true,
+    "demos/github-demo/# local env files": true,
+    "demos/github-demo/.env*.local": true,
+    "demos/github-demo/# vercel": true,
+    "demos/github-demo/.vercel": true,
+    "demos/github-demo/# typescript": true,
+    "demos/github-demo/*.tsbuildinfo": true,
+    "demos/github-demo/next-env.d.ts": true,
+    "demos/github-demo/.vscode": true,
+    "demos/github-demo/node_modules": true,
+    "demos/github-demo/.next": true,
     "**/dist/**": true,
     "**/node_modules/**": true,
-    ".vscode": true,
     "**/yarn-error.log": true,
     "**/*.tsbuildinfo": true,
     "**/*.tgz": true,
@@ -288,14 +325,53 @@
     "**/*.d.ts": true,
     "**/.DS_Store": true,
     "**/.swc/**": true,
+    "**/.idea/**": true,
     "# the built binary is downloaded into this folder during CI": true,
     "artifacts": true,
     "**/out/**": true,
     "**/.turbo/**": true,
     "**/swc_isograph_plugin.wasm": true,
-    "**/.claude/**": true,
-    "**/.cargo/**": true,
-    "**/.rustup/**": true
+    "tree-sitter/# Rust artifacts": true,
+    "tree-sitter/target/": true,
+    "tree-sitter/Cargo.lock": true,
+    "tree-sitter/# Node artifacts": true,
+    "tree-sitter/build/": true,
+    "tree-sitter/prebuilds/": true,
+    "tree-sitter/node_modules/": true,
+    "tree-sitter/package-lock.json": true,
+    "tree-sitter/# Swift artifacts": true,
+    "tree-sitter/.build/": true,
+    "tree-sitter/Package.resolved": true,
+    "tree-sitter/# Go artifacts": true,
+    "tree-sitter/_obj/": true,
+    "tree-sitter/# Python artifacts": true,
+    "tree-sitter/.venv/": true,
+    "tree-sitter/dist/": true,
+    "tree-sitter/*.egg-info": true,
+    "tree-sitter/*.whl": true,
+    "tree-sitter/# C artifacts": true,
+    "tree-sitter/*.a": true,
+    "tree-sitter/*.so": true,
+    "tree-sitter/*.so.*": true,
+    "tree-sitter/*.dylib": true,
+    "tree-sitter/*.dll": true,
+    "tree-sitter/*.pc": true,
+    "tree-sitter/*.exp": true,
+    "tree-sitter/*.lib": true,
+    "tree-sitter/# Zig artifacts": true,
+    "tree-sitter/.zig-cache/": true,
+    "tree-sitter/zig-cache/": true,
+    "tree-sitter/zig-out/": true,
+    "tree-sitter/# Example dirs": true,
+    "tree-sitter//examples/*/": true,
+    "tree-sitter/# Grammar volatiles": true,
+    "tree-sitter/*.wasm": true,
+    "tree-sitter/*.obj": true,
+    "tree-sitter/*.o": true,
+    "tree-sitter/# Archives": true,
+    "tree-sitter/*.tar.gz": true,
+    "tree-sitter/*.tgz": true,
+    "tree-sitter/*.zip": true
   },
   "editor.rename.enablePreview": false,
   "isograph.rootDirectory": "./demos/pet-demo",
