--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,3 +78,4 @@ unused_self = "deny"
 needless_for_each = "deny"
 struct_field_names = "deny"
 cast_precision_loss = "deny"
+items_after_statements = "deny"
