--- a/demos/sqlite-demo/isograph.config.json
+++ b/demos/sqlite-demo/isograph.config.json
@@ -1,8 +1,10 @@
 {
   "$schema": "../../libs/isograph-compiler/isograph-config-schema.json",
   "project_root": "./src/components",
-  "schema": "./schema.graphql",
+  "kind": "sql",
+  "schema": "./schema.sql",
   "options": {
-    "module": "esmodule"
+    "module": "esmodule",
+    "on_invalid_id_type": "warn"
   }
 }
