clippy: deny single_char_pattern

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,3 +80,4 @@ struct_field_names = "deny"
 cast_precision_loss = "deny"
 match_bool = "deny"
 items_after_statements = "deny"
+single_char_pattern = "deny"
