--- a/libs/isograph-react-disposable-state/package.json
+++ b/libs/isograph-react-disposable-state/package.json
@@ -25,8 +25,10 @@
     "react": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "16.3.2",
     "@types/react": "18.3.1",
     "@types/react-test-renderer": "^18.3.0",
+    "happy-dom": "20.4.0",
     "react-test-renderer": "^18.2.0",
     "typescript": "5.6.3"
   },
