remove tsconfig.pkg.json files
these are not needed anymore, 
because we use tsdown for building,
thi let's us include all files for type checking

--- a/libs/isograph-react-disposable-state/tsconfig.json
+++ b/libs/isograph-react-disposable-state/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "extends": "./tsconfig.pkg.json",
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "noEmit": true
-  }
+  },
+  "include": ["./**/*.ts"]
 }
