--- a/libs/isograph-react/tsconfig.json
+++ b/libs/isograph-react/tsconfig.json
@@ -1,6 +1,8 @@
 {
-  "extends": "./tsconfig.pkg.json",
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
+    "jsx": "react",
     "noEmit": true
-  }
+  },
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
