--- a/libs/isograph-disposable-types/tsconfig.json
+++ b/libs/isograph-disposable-types/tsconfig.json
@@ -1,6 +1,8 @@
 {
-  "extends": "./tsconfig.pkg.json",
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "noEmit": true
-  }
+    "noEmit": true,
+    "jsx": "react"
+  },
+  "include": ["./**/*.ts"]
 }
