--- a/libs/isograph-reference-counted-pointer/tsconfig.json
+++ b/libs/isograph-reference-counted-pointer/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "extends": "./tsconfig.pkg.json",
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "noEmit": true
-  }
+  },
+  "include": ["./**/*.ts"]
 }
