--- a/libs/isograph-react/tsconfig.json
+++ b/libs/isograph-react/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "jsx": "react",
-    "noEmit": true
+    "noEmit": true,
+    "paths": {
+      "@iso": ["./src/tests/__isograph/iso.ts"],
+      "@isograph/react": ["./src/index.ts"]
+    }
   },
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
