--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ permissions:
   pages: write
   id-token: write
 
+env:
+  TURBO_TELEMETRY_DISABLED: 1
+
 jobs:
   build-cli:
     name: Build compiler
