--- a/libs/isograph-babel-plugin/tsconfig.json
+++ b/libs/isograph-babel-plugin/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": true,
-    "noEmit": true
+    "checkJs": true
   },
   "include": ["./**/*.ts", "./**/*.js"]
 }
