--- a/libs/isograph-react/tsconfig.package.json
+++ b/libs/isograph-react/tsconfig.package.json
@@ -1,9 +1,8 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "jsx": "react",
-    "noEmit": true
+    "jsx": "react"
   },
-  "include": ["./**/*.ts", "./**/*.tsx"],
-  "exclude": ["./src/tests/**/*.ts", "./src/tests/**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["src/tests/**/*.ts", "src/tests/**/*.tsx"]
 }
