--- a/libs/isograph-react-disposable-state/tsconfig.json
+++ b/libs/isograph-react-disposable-state/tsconfig.json
@@ -1,6 +1,4 @@
 {
-  "extends": "./tsconfig.pkg.json",
-  "compilerOptions": {
-    "noEmit": true
-  }
+  "extends": "../../tsconfig.build.json",
+  "include": ["./**/*.ts"]
 }
