--- a/libs/isograph-react/package.json
+++ b/libs/isograph-react/package.json
@@ -3,8 +3,8 @@
   "version": "0.5.3",
   "description": "Use Isograph with React",
   "homepage": "https://isograph.dev",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.cts",
   "author": "Isograph Labs",
   "license": "MIT",
   "scripts": {
@@ -14,7 +14,7 @@
     "test-watch": "vitest watch",
     "coverage": "vitest run --coverage",
     "prepack": "pnpm run test && pnpm run compile-libs",
-    "tsc": "tsc",
+    "tsc": "tsc -b",
     "tsc-force": "tsc --build --clean && tsc --build --force",
     "iso": "../../target/debug/isograph_cli --config ./isograph.config.json"
   },
@@ -43,8 +43,8 @@
   "module": "./dist/index.mjs",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
   }
