Add Phase 1 SQL support with DataFusion and Substrait
Implements end-to-end SQL query pipeline for simple SELECT queries.

Compile-time: MergedSelectionMap → DataFusion LogicalPlan → Substrait binary
Runtime: Substrait plan → query execution → Arrow IPC response

Phase 1 scope: Simple SELECT with column projection (no WHERE, no JOINs)

Components added:
- isograph_server: Axum HTTP server with /query endpoint
- sql_network_protocol: LogicalPlan builder and Substrait serialization
- Integration test validating round-trip serialization

Built on ch1ffa/sql branch for Phase 2 (parameters) and Phase 3 (JOINs).

--- a/crates/artifact_content/Cargo.toml
+++ b/crates/artifact_content/Cargo.toml
@@ -7,9 +7,11 @@ license = { workspace = true }
 [dependencies]
 common_lang_types = { path = "../common_lang_types" }
 graphql_lang_types = { path = "../graphql_lang_types" }
+sql_network_protocol = { path = "../sql_network_protocol" }
 intern = { path = "../../relay-crates/intern" }
 isograph_schema = { path = "../isograph_schema" }
 isograph_config = { path = "../isograph_config" }
+datafusion = "52.1"
 pico = { path = "../pico" }
 isograph_lang_types = { path = "../isograph_lang_types" }
 prelude = { path = "../prelude" }
