--- a/crates/artifact_content/Cargo.toml
+++ b/crates/artifact_content/Cargo.toml
@@ -25,6 +25,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+base64 = "0.22"
 
 [lints]
 workspace = true
