--- a/crates/isograph_server/Cargo.toml
+++ b/crates/isograph_server/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+base64 = "0.22"
 
 [[bin]]
 name = "isograph-server"
