Add Playwright E2E tests for Phase 1 SQL support
Completes Task #7: Create end-to-end tests validating the full pipeline.

Added to sqlite-demo:
- Playwright configuration and test infrastructure
- E2E test suite (phase1-sql.spec.ts) testing:
  * Loading and displaying SQL query results
  * Verifying isograph-server API calls
  * Error handling and graceful degradation
  * Artifact generation validation
- run-e2e-test.sh: Automated test runner script that:
  * Initializes test database
  * Compiles ISO literals to Substrait artifacts
  * Starts isograph-server
  * Runs Playwright tests
  * Cleans up
- Comprehensive README documenting:
  * Setup instructions
  * Test structure
  * Phase 1 architecture diagram
  * Troubleshooting guide
  * Next steps for Phase 2 & 3

Test flow:
1. ISO literal → Compiler → Substrait binary (base64)
2. React app → POST /query → isograph-server
3. Server executes query → Returns Arrow IPC
4. App deserializes → Renders UI

Scripts added:
- npm run test:e2e: Run E2E tests
- npm run test:e2e:ui: Interactive UI mode
- npm run test:e2e:headed: See browser during tests

Phase 1 E2E validation is now complete!

--- a/demos/sqlite-demo/package.json
+++ b/demos/sqlite-demo/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "tsc": "tsc -b",
-    "iso": "../../target/debug/isograph_cli --config ./isograph.config.json"
+    "iso": "../../target/debug/isograph_cli --config ./isograph.config.json",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed"
   },
   "dependencies": {
     "@isograph/react": "workspace:*",
@@ -20,6 +23,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.11.1",
     "@isograph/compiler": "workspace:*",
+    "@playwright/test": "^1.48.0",
     "@types/node": "^22.7.5",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
