--- a/demos/sqlite-demo/.gitignore
+++ b/demos/sqlite-demo/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+# Test databases
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
