Add protoc to CI and document CI status
- Install protobuf-compiler in cargo-test and cargo-clippy jobs
  (required for substrait dependency added in Phase 1)
- Add CI-STATUS.md documenting all CI failures and their root causes
  (most failures are pre-existing swc_common dependency issue)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -237,6 +237,8 @@ jobs:
         with:
           toolchain: stable
           components: clippy
+      - name: Install protoc
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
       - name: Run cargo clippy
         run: cargo clippy
 
@@ -250,6 +252,8 @@ jobs:
         with:
           toolchain: stable
           components: rustfmt
+      - name: Install protoc
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
       - name: Run cargo test
         run: cargo test
 
